Fix issue with desktops using the --use-display flag being shifted 2.25px down

--- a/html5/css/client.css
+++ b/html5/css/client.css
@@ -99,6 +99,7 @@ canvas {
 }
 .window.desktop {
   box-shadow: none;
+  top: 0px;
 }
 
 .window-NORMAL {
